@@ -1,3 +1,5 @@
+archives/OSCON2005LightningTalk.txt
+archives/OSCON2006SessionProposal.txt
 Changes
 GPL
 INSTALL
