@@ -23,6 +23,8 @@
 
     * This is the initial file manifest:
 
+        archives/OSCON2005LightningTalk.txt
+        archives/OSCON2006SessionProposal.txt
         Changes
         GPL
         INSTALL
